--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,13 +1,10 @@
-body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
 .FooterComponent {
   display: flex;
-  position: fixed;
-  bottom: 0;
-  left: 45vw;
+  height: 15vh;
+  justify-content: space-around;
   color: aliceblue;
+  p {
+    align-self: flex-end;
+    margin: 0;
+  }
 }
