--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   background-color: #363535;
   width: 85vw;
+  height: 64vh;
   margin: auto;
   padding: 2rem;
   border-radius: 15px;
