--- a/src/styles/ProjectPage.css
+++ b/src/styles/ProjectPage.css
@@ -3,15 +3,27 @@
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
+  h1 {
+    margin: 0.5rem;
+  }
+  a {
+    padding: 0.5rem;
+    margin-top: 1rem;
+    background-color: goldenrod;
+    text-decoration: none;
+    color: white;
+    border-radius: 5px;
+  }
 }
 
 .project-img {
   background-color: #363535;
   border-radius: 25px;
   padding: 0.5rem;
-  height: 53vh;
+  height: 55vh;
   img {
     width: 50vw;
+    max-height: 400px;
     border-radius: 25px;
     padding: 1rem;
     background-color: goldenrod;
@@ -47,5 +59,5 @@
   display: flex;
   flex-direction: row;
   background-color: #363535;
-  min-height: 63vh;
+  min-height: 60vh;
 }
